--- a/templates/albumPage.html
+++ b/templates/albumPage.html
@@ -3,43 +3,52 @@
 
 {% block content %}
 
-<div class="col-10 mt-3" style="margin: auto;">
+<div class="col-10 mt-3" style="margin: auto; position: relative;">
 
   <img src="{{album.image_url}}" alt="{{album.name}}" class="h-25 w-25 mb-3" style="display: inline-block;">
-  <div style="display: inline-block; position: relative; height: 100px;" class="col-6">
+  <div style="display: inline-block; position: relative; height: 100px;" class="col-7 ms-3">
     <h1>{{ album.name }}</h1>
 
     <h3>By:
-      <a href="/artists/{{album.artist_id}}" class="text-light">
-        {{album.artist_name}}
-      </a>
+      {% for artist in album.artists %}
+        {% if album.artists |length == loop.index %}
+        <a href="/artists/{{artist.id}}" class="text-light">
+          {{artist.name}}
+        </a>
+        {% else %}
+        <a href="/artists/{{artist.id}}" class="text-light">
+          {{artist.name}}
+        </a>,
+        {% endif %}
+      {% endfor %}
     </h3>
+  </div>
 
-    <a
+  <a
     href="/rate-album/{{album.id}}"
     class="btn btn-outline-primary"
     style="
       border-radius: 20px;
-      position: relative;
-      /* left: 90%; */
-      top: 50%;
+      position: absolute;
+      bottom: 10%;
+      right: 5%;
+      /* left: 27%; */
       ">
       Rate Album
     </a>
-  </div>
 
 </div>
 
 <div class="mb-5">
   {% for song in album.tracks %}
-  <div style="background-color: rgba(38, 39, 48, 0.141); border-radius: 5px; margin: auto; display: flex; justify-content: space-between;" class="pt-1 pb-1 col-9">
+  <div style="background-color: rgba(38, 39, 48, 0.141); border-radius: 5px; margin: auto; display: flex; justify-content: space-between;" class="pt-1 pb-1 col-9 mb-2">
     <span class="ms-2">
       {{song.track_number}}. {{song.name}}
     </span>
     <span class="text-body me-2">
       {{song.duration_ms |format_runtime}}
     </span>
-  </div><br>
+  </div>
 
   {% endfor %}
 </div>
