--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -3,10 +3,14 @@
 
 {% block content %}
 
+<div class="mt-5">
+
 {% for rating in ratings %}
 
 {{ show_rating(rating) }}
 
 {% endfor %}
+
+</div>
 
 {% endblock %}
