--- a/templates/ratingPage.html
+++ b/templates/ratingPage.html
@@ -9,7 +9,7 @@
   </p>
 
   <img src="{{rating.album.image_url}}" alt="{{rating.album.name}}" class="h-25 w-25 mb-3" style="display: inline-block;">
-  <div style="display: inline-block; position: relative; height: 100px;" class="col-6">
+  <div style="display: inline-block; position: relative; height: 100px;" class="col-7 ms-3">
     <h1>
       <a href="/albums/{{rating.album.id}}" class="text-light">
       {{ rating.album.name }}
