--- a/templates/userPage.html
+++ b/templates/userPage.html
@@ -5,7 +5,7 @@
 
 {% block content %}
 
-<div class="col-10 mt-3" style="margin: auto;">
+<div class="col-10 mt-3 mb-5" style="margin: auto;">
   <img src="{{user.image_url}}" alt="{{user.username}} Image" class="w-25"
     style="border-radius: 50%; display: inline-block;">
 
@@ -56,9 +56,10 @@
 
     {% endif %}
   </div>
+
+  <p class="col-10 mt-1" style="margin: auto;">{{user.bio or ''}}</p>
 </div>
 
-<p>{{user.bio or ''}}</p>
 
 {%for rating in user.ratings%}
 
