--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -3,14 +3,12 @@
 
 {% block content %}
 
-<div class="mt-5">
+<div class="mt-5" id="show-ratings">
 
-{% for rating in ratings %}
-
-{{ show_rating(rating) }}
-
-{% endfor %}
 
 </div>
+
+
+<script src="/static/homepage.js"></script>
 
 {% endblock %}
