cleaned up code

--- a/templates/artistPage.html
+++ b/templates/artistPage.html
@@ -8,7 +8,8 @@
 
 <div class="col-10 mt-3" style="margin: auto;">
 
-  <img src="{{artist.image_url}}" alt="{{artist.name}} Image" class="w-25 h-25" style="border-radius: 1500px; display: inline-block;">
+  <img src="{{artist.image_url}}" alt="{{artist.name}} Image" class="w-25 h-25"
+    style="border-radius: 1500px; display: inline-block;">
 
   <div style="display: inline-block;" class="ms-3">
     <h1>{{artist.name}}</h1>
@@ -22,24 +23,6 @@
 
 
 <div class="mt-5" id="show-albums">
-
-<!-- {% for album in artist.albums %}
-
-  <div class="card border-primary mb-5 col-9" style="background-color: rgba(38, 39, 48, 0.141); margin: auto;">
-    <div class="card-body border-primary" onclick="location.href='/albums/{{album.id}}';" style="cursor: pointer;">
-      <img src="{{album.image_url}}" alt="{{album.name}}" class="col-2" style="display: inline-block">
-      <div style="display: inline-block;" class="ms-2">
-        <h2 class="text-light">
-          {{album.name}}
-        </h2>
-        <p class="text-secondary">
-          released: {{album.release_date[0:4]}}
-        </p>
-      </div>
-    </div>
-  </div>
-
-{% endfor %} -->
 
 </div>
 
