--- a/templates/login.html
+++ b/templates/login.html
@@ -5,7 +5,9 @@
 {% block content %}
 <h1 style="text-align: center;" class="text-primary mt-5">Login</h1>
 
-<div class="card border-primary mb-3 mt-5 text-light col-8 col-sm-3" style="background-color: rgba(38, 39, 48, 0.141); margin: auto;">
+<div
+  class="card border-primary mb-3 mt-5 text-light col-8 col-sm-3"
+  style="background-color: rgba(38, 39, 48, 0.141); margin: auto;">
   <div class="card-body">
     <form method="POST" class="w-100">
       {{ form.hidden_tag() }}
