--- a/templates/signup.html
+++ b/templates/signup.html
@@ -6,7 +6,9 @@
 
 <h1 style="text-align: center;" class="text-primary mt-3">Sign Up</h1>
 
-<div class="card border-primary mb-3 mt-5 text-light col-8 col-sm-3" style="background-color: rgba(38, 39, 48, 0.141); margin: auto;">
+<div
+  class="card border-primary mb-3 mt-5 text-light col-8 col-sm-3"
+  style="background-color: rgba(38, 39, 48, 0.141); margin: auto;">
   <div class="card-body">
 
     <form method="POST">
