--- a/templates/userPage.html
+++ b/templates/userPage.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% from 'rating.html' import show_rating with context%}
 
-{% block title %} user.username {% endblock %}
+{% block title %} {{user.username}} {% endblock %}
 
 {% block content %}
 
