--- a/templates/editRatingForm.html
+++ b/templates/editRatingForm.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %} Login {% endblock %}
+{% block title %} Edit rating for {{album.name}} {% endblock %}
 
 {% block content %}
 <div class="col-10 mt-3" style="margin: auto;">
