--- a/templates/editUserForm.html
+++ b/templates/editUserForm.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %} Signup {% endblock %}
+{% block title %} Edit Profile {% endblock %}
 
 {% block content %}
 
