--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -1,6 +1,8 @@
 {% extends 'base.html' %}
 {% from 'rating.html' import show_rating with context%}
 
+{% block title %} Album Rater {% endblock %}
+
 {% block content %}
 
 <div class="mt-5" id="show-ratings">
