--- a/templates/ratingPage.html
+++ b/templates/ratingPage.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 
+{% block title %} Rating by {{rating.author}} {% endblock %}
+
 {% block content %}
 
 <div class="col-10 mt-3" style="margin: auto; position: relative;">
